# WebRascal3

./: .gitignore  package-lock.json  package.json  rspack.config.js  tsconfig.json  webrascal.worker.js
demo/: index.html
rewriter/: Cargo.toml
rewriter/js/: Cargo.toml
rewriter/js/src/: cfg.rs  changes.rs  lib.rs  rewrite.rs  visitor.rs
rewriter/native/: Cargo.toml
rewriter/native/src/: lib.rs  main.rs  rewriter.rs  test_runner.rs
rewriter/native/tests/: 0-sanity.js  1-destructure.js  2-function-default.js  3-shadow-globals.js  integration.rs
rewriter/transform/: Cargo.toml
rewriter/transform/src/: lib.rs  transform.rs
rewriter/wasm/: Cargo.toml  build.bat  build.sh
rewriter/wasm/src/: error.rs  jsr.rs  lib.rs
scripts/: dev-server.mjs
src/: entry.ts  global.d.ts  symbols.ts  types.ts
src/client/: client.ts  entry.ts  events.ts  location.ts  singletonbox.ts  swruntime.ts
src/client/dom/: cookie.ts  element.ts  history.ts  open.ts  origin.ts  protocol.ts  serviceworker.ts
src/client/shared/: err.ts  eval.ts  event.ts  function.ts  postmessage.ts  sourcemaps.ts  storage.ts  worker.ts  wrap.ts
src/client/shared/requests/: eventsource.ts  fetch.ts  websocket.ts  xmlhttprequest.ts
src/client/worker/: importScripts.ts
src/controller/: controller.ts  entry.ts  frame.ts
src/shared/: cookie.ts  headers.ts  htmlRules.ts  index.ts
src/shared/rewriters/: css.ts  headers.ts  html.ts  index.ts  js.ts  url.ts  wasm.ts  worker.ts
src/shared/security/: forceReferrer.ts  siteTests.ts
src/worker/: error.ts  fakesw.ts  fetch.ts  index.ts
