[workspace]
members = ["js", "transform", "native", "wasm"]
resolver = "2"

[workspace.dependencies]
oxc = { version = "0.71", features = ["full"] }
smallvec = "1.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
transform = { path = "transform" }
js = { path = "js" }

[workspace.lints.rust]
unsafe_code = "warn"